css/style.css
/* ... */
.last-league-table .top-card .link-td:hover .score-link::before {
    background-color: white;
}

.last-league-table .top-card .time {
    padding-right: 0;
}

.last-league-table .video {
    width: 255px;
    border-radius: 6.3px;
}

/* Last League Table Person */
.last-league-table .xi-img-div {
    width: 64px;
    height: 64px;
    border-radius: 50%;
    background-color: rgba(255, 255, 255, 0.1);
    border: 1px solid rgba(255, 255, 255, 0.1);
}

.last-league-table .xi-img-div img {
    border-radius: 50%;
    width: 100%;
}

.last-league-table .person-name {
    font-weight: 700;
    font-size: 18px;
}

.last-league-table .flags {
    min-width: unset;
}

.last-league-table .points {
    background-color: white;
    width: 48px;
    height: 48px;
    border-radius: 50%;
    font-weight: 700;
    font-size: 18px;
    color: #8B42F2;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Last League Table Cards */
.last-league-table .plays-heading {
    color: white;
    font-weight: 500;
    font-size: 14px;
}

.ll-cards {
    display: flex;
    justify-content: space-between;
    align-items: center;
}


.ll-card {
    min-width: 125px;
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 8px;
    padding: 12px;
}

.ll-card .number {
    font-size: 24px;
    font-weight: 700;
    display: block;
    color: white;
}

.ll-card .name {
    font-size: 14px;
    font-weight: 400;
    font-family: 'Inter', sans-serif;
    color: rgba(255, 255, 255, 0.7);
    display: block;
}


/* Footer */
.footer {
    color: #4D5F7A;
    padding: 40px 0;
    background-color: white;
}

.footer p {
    font-size: 16px;
}

.footer ul {
    list-style-type: none;
    display: flex;
    padding-left: 0;
}

.footer li {
    display: inline-block;
}

.footer .social-ul {
    justify-content: start;
    align-items: center;
    font-size: 24px;
    gap: 24px;
}

.footer .social-a {
    color: #556987;
}

.footer .social-a:hover {
    color: #4c5c74;
}


.footer .f-links-ul {
    font-size: 14px;
    justify-content: space-between;
    align-items: center;
}

.footer .f-link {
    text-decoration: none;
    color: #556987;
}

/* Media Queries with Max-Width */
@media screen and (max-width: 1200px) {
    /* Header */
    .header .logo-img {
        width: 180px;
    }

    .header .navbar .nav-link {
        padding-bottom: 26px;
    }

    /* Latest Table Styling */
    .latest-table .left-part {
        gap: 8px;
    }

    .latest-table .lp-img-div {
        width: 48px;
        height: 48px;
    }

    .latest-table .name {
        font-size: 14px;
    }

    .latest-table .position {
        font-size: 12px;
    }

    .latest-table .center-part {
        gap: 8px;
    }
    
    .latest-table .right-part {
        gap: 8px;
    }

    .valuable-players-table .rpc-val {
        font-size: 12px;
    }

    /* Players Cards Styling */
    .player-card-1 .left-img-div {
        padding-top: 11px;
    }

    .player-card .player-card-name {
        font-size: 25px;
        line-height: 29px;
    }

    .player-card .player-info{
        margin-bottom: 8px;
        font-size: 13px;
    }

    .player-card .bold-text {
        font-size: 20px;
    }

    .player-card .p-bottom-card {
        padding: 9px;
        min-width: 110px;
    }

    .player-card-2 .left-img-div {
        padding-top: 10px;
    }

    /* XI Table Styling */
    .xi-table .tr:nth-child(6) {
        padding-left: 64px;
        padding-right: 74px;
    }

    /* Last League Table Cards */
    /* .last-league-table > .tr, .last-league-table .last-league-content > .tr  {
        min-width: unset;
        width: 468px;
    } */

    .last-league-table .top-card {
        width: 200px;
    }

    .last-league-table .video {
        width: 200px;
    }

    .ll-card {
        min-width: 100px;
    }

    /* Footer Styling */
    .footer .f-links-ul {
        font-size: 13px;
    }
}

@media screen and (max-width: 991px){
    /* Global Styling */

    .b-lg-mb-20 {
        margin-bottom: 20px;
    }

    /* Global Section Head Styling */
    .section-head .main-heading {
        font-size: 30px;
        padding-left: 18px;
    }
    .section-head .main-heading::before {
        width: 12px;
        height: 15px;
    }

    .section-head .top-link {
        font-size: 15px;
    }

    /* Header */
    .header-content {
        padding: 20px 24px;
        position: relative;
    }

    .header .logo-img {
        width: 164px;
    }

    .header .navbar .nav-link {
        padding-bottom: 20px;
        width: 100%;
    }

    .header button {
        padding-bottom: 10px;
    }

    
    /* Bootstrap Navbar Settings */
    .navbar {
        position: static;
    }

    .navbar-toggler:focus {
        box-shadow: none;
    }

    .navbar-collapse {
        background-color: white;
        position: absolute;
        top: 101%;
        left: 0;
        width: 100%;
        border-radius: 8px;
        z-index: 1;
    }

    button.navbar-toggler {
        padding-bottom: 0;
    }

    /* XI Table Styling */
    .xi-table .tr:nth-child(6) {
        padding-left: 96.5px;
        padding-right: 121px;
    }

    /* Last League Table */
    .last-league-table {
        min-width: 468px;
    }

    .last-league-table > .tr, .last-league-table .last-league-content > .tr {
        min-width: 468px;
    }
}
/* ... */

